--- a/css/homepage.css
+++ b/css/homepage.css
@@ -304,14 +304,17 @@
             width: 18px;
             margin-right: 0; }
           .course__finder__form .panel-nav ul li a.arrow-prev {
-            display: none;
+            opacity: 0;
+            cursor: default;
             color: #8C8279; }
           .course__finder__form .panel-nav ul li a.dot-one span {
             background-color: #4693ea; }
           .course__finder__form .panel-nav ul li a.dot-two span {
             background-color: white; }
           .course__finder__form .panel-nav ul li a.arrow-next {
-            color: #8C8279; }
+            opacity: 1;
+            color: #8C8279;
+            transition: all .5s ease-in-out; }
       .course__finder__form .panel-nav a {
         display: block; }
       .course__finder__form .panel-nav .dot span {
@@ -522,13 +525,15 @@
     -webkit-transform: translate3d(0, 0, 0);
             transform: translate3d(0, 0, 0); }
   .course__finder.show-second .panel-nav ul li a.arrow-prev {
-    display: block; }
+    opacity: 1;
+    transition: all .5s ease-in-out; }
   .course__finder.show-second .panel-nav ul li a.dot-one span {
     background-color: white; }
   .course__finder.show-second .panel-nav ul li a.dot-two span {
     background-color: #4693ea; }
   .course__finder.show-second .panel-nav ul li a.arrow-next {
-    display: none; }
+    opacity: 0;
+    cursor: default; }
 
 /* 
 * Pattern name: Footer
@@ -970,6 +975,12 @@ body {
   width: 100%;
   margin-left: 0; }
 
+.news__item a h3, .news__item a p {
+  color: #333333; }
+
+.news__item a:hover h3, .news__item a:hover p {
+  color: #034da1; }
+
 .news__item h3 {
   font-size: 24px;
   font-size: 2.4rem;
@@ -1006,13 +1017,23 @@ body {
   background-color: rgba(140, 130, 121, 0.1);
   padding: 2rem; }
   .news__item--most-read h4 {
-    margin-bottom: 5rem; }
+    margin-bottom: 5rem;
+    font-size: 2.4rem;
+    line-height: 1.17;
+    letter-spacing: 0.2px; }
   .news__item--most-read ul {
     padding: 0;
-    margin: 0 0 6.4rem; }
+    margin: 0 0 5.3rem; }
     .news__item--most-read ul li {
       list-style: none;
-      margin-bottom: 2.4rem; }
+      margin-bottom: 1.7rem; }
+      .news__item--most-read ul li a {
+        font-size: 1.7rem;
+        line-height: 1.33;
+        color: #333333; }
+        .news__item--most-read ul li a:hover {
+          text-decoration: underline;
+          color: #034da1; }
   .news__item--most-read a {
     color: rgba(70, 147, 234, 0.9);
     font-size: 16px;
@@ -1129,6 +1150,16 @@ body {
     margin-top: .8rem;
     font-size: 35px;
     font-size: 3.5rem; }
+  .owl-nav .owl-prev.disabled,
+  .owl-nav .owl-next.disabled {
+    color: #d6d2c4;
+    border-color: #d6d2c4; }
+    .owl-nav .owl-prev.disabled:hover,
+    .owl-nav .owl-next.disabled:hover {
+      color: #d6d2c4;
+      border-color: #d6d2c4;
+      background-color: white;
+      cursor: default; }
 
 .owl-nav .owl-prev {
   margin-right: 1.1rem; }
@@ -1300,7 +1331,7 @@ div[class*="desktop__controls"].owl-nav {
   .people a h3, .people a p {
     color: #333333; }
   .people a:hover h3, .people a:hover p {
-    color: #333333;
+    color: #034da1;
     text-decoration: underline; }
 
 /* 
@@ -1531,8 +1562,7 @@ div[class*="desktop__controls"].owl-nav {
   margin-right: 1.5rem;
   margin-bottom: 0;
   background-color: white;
-  padding: 2.5rem 1.2rem;
-  height: 100%; }
+  padding: 2.5rem 1.2rem; }
   @media only screen and (min-width: 768px) and (max-width: 989px) {
     .social__events__carousel .event__item {
       -ms-flex-preferred-size: 44%;
@@ -1564,7 +1594,9 @@ div[class*="desktop__controls"].owl-nav {
   display: flex;
   -ms-flex-direction: column;
       flex-direction: column;
-  height: 100%; }
+  height: 100%;
+  -ms-flex: 1 1 100%;
+      flex: 1 1 100%; }
   .social__events__carousel .event__content a {
     margin-top: auto; }
 
@@ -2019,7 +2051,8 @@ div[class*="desktop__controls"].owl-nav {
 * Note: N/A
 -------------------------------------------------------------- */
 .statistics {
-  margin-bottom: 5.2rem; }
+  margin-top: 4.7rem;
+  margin-bottom: 0; }
   @media only screen and (max-width: 767px) {
     .statistics {
       margin-top: 3rem;
@@ -2221,6 +2254,9 @@ h2 {
       margin-bottom: 1.9rem; } }
   .ucl__news a {
     color: #333333; }
+    .ucl__news a:hover h3, .ucl__news a:hover p {
+      color: #034da1;
+      text-decoration: underline; }
   .ucl__news img {
     margin-bottom: 0;
     display: block; }
