--- a/css/homepage.css
+++ b/css/homepage.css
@@ -66,7 +66,6 @@
     display: flex;
     -ms-flex-direction: column;
         flex-direction: column;
-    height: 100%;
     -ms-flex-pack: center;
         justify-content: center;
     padding: 0 3rem;
@@ -1026,7 +1025,7 @@ body {
     margin: 0 0 5.3rem; }
     .news__item--most-read ul li {
       list-style: none;
-      margin-bottom: 1.7rem; }
+      margin-bottom: 1.2rem; }
       .news__item--most-read ul li a {
         font-size: 1.7rem;
         line-height: 1.33;
@@ -1562,7 +1561,8 @@ div[class*="desktop__controls"].owl-nav {
   margin-right: 1.5rem;
   margin-bottom: 0;
   background-color: white;
-  padding: 2.5rem 1.2rem; }
+  padding: 2.5rem 1.2rem 4rem;
+  position: relative; }
   @media only screen and (min-width: 768px) and (max-width: 989px) {
     .social__events__carousel .event__item {
       -ms-flex-preferred-size: 44%;
@@ -1598,7 +1598,9 @@ div[class*="desktop__controls"].owl-nav {
   -ms-flex: 1 1 100%;
       flex: 1 1 100%; }
   .social__events__carousel .event__content a {
-    margin-top: auto; }
+    position: absolute;
+    bottom: 2rem;
+    left: 1.2rem; }
 
 .social__events__carousel h3 {
   font-size: 16px;
